--- a/API/package.json
+++ b/API/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-mysql-session": "^3.0.0",
+    "express-session": "^1.17.3",
     "mysql": "^2.18.1",
     "paystack": "^2.0.1",
     "swagger-jsdoc": "^6.2.8",
